crates/metaltile-std/tests/snapshots/steel_msl_snapshots__steel_gemm_splitk_nax_accum_f32_msl.snap
---
source: crates/metaltile-std/tests/steel_msl_snapshots.rs
expression: msl
---
// Generated by MetalTile
#include <metal_stdlib>
using namespace metal;

kernel void mt_steel_gemm_splitk_accum_nax(
    const device float *partials [[buffer(0)]],
    device float *out [[buffer(1)]],
    constant uint &m [[buffer(2)]],
    constant uint &n [[buffer(3)]],
    constant uint &n_splits [[buffer(4)]],
    uint3 gid [[thread_position_in_grid]]
) {
    float acc[1];

    uint v0 = gid.x;
    auto v1 = m;
    auto v2 = n;
    auto v3 = n_splits;
    auto v4 = v1 * v2;
    uint v5 = 0u;
    auto v6 = partials[v0];
    acc[v5] = v6;
    uint v7 = 1u;
    for (uint i_0 = v7; i_0 < v3; i_0 += v7) {
        auto v11 = ((i_0 * v4) + v0);
        auto v12 = partials[v11];
        auto v13 = acc[v5];
        auto v14 = v13 + v12;
        acc[v5] = v14;
    }
    auto v8 = acc[v5];
    float v9 = static_cast<float>(v8);
    out[v0] = v9;
}
